--- a/Actividad5/.project
+++ b/Actividad5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>_pasted_code_</name>
+	<name>Actividad5</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1727859766752</id>
+			<id>1729067140673</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
